--- a/styles/style.css
+++ b/styles/style.css
@@ -165,6 +165,7 @@ nav .navbar-toggler i {
   left: 0;
   z-index: 1;
   overflow: visible;
+  padding: 5px;
 }
 
 .showcase .herobuttoncontainer {
@@ -207,6 +208,7 @@ nav .navbar-toggler i {
   .showcase .title {
     position: absolute;
     margin: 0;
+    padding: 0;
     top: 30%;
     left: 20%;
   }
